--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -16,9 +16,18 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="580dp"
         android:layout_gravity="center"
         android:src="@drawable/welcome_girl" />
+
+    <Button
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:text="Get Started"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/theme_enable_btn_background"/>
+
 
 
 </LinearLayout>
