--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple_200">#4D455D</color>
+    <color name="purple_200">#6495ED</color>
     <color name="background">#E96479</color>
-    <color name="purple_700">#BA4F60</color>
+    <color name="purple_700">#6495ED</color>
     <color name="teal_200">#7DB9B6</color>
     <color name="teal_700">#009688</color>
     <color name="gray">#F3F3F3</color>
@@ -16,5 +16,15 @@
     <color name="salesblue">#D5EDF5</color>
     <color name="light_blue">#6495ED</color>
     <color name="dark_pink">#DE3163</color>
+
+
+    <color name="selectedColor">#000000</color>
+    <color name="unselectedColor">#808080</color>
+    <color name="blue_grey_dark">#000a12</color>
+    <color name="blue_grey">#263238</color>
+    <color name="blue_grey_light">#4f5b62</color>
+    <color name="green">#0F7A08 </color>
+
+
 
 </resources>
