--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gratitude.dashboard.DashboardActivity">
+    tools:context="com.example.gratitude.ui.DashboardActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
