--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gratitude.dashboard.DashboardFragment">
+    tools:context="com.example.gratitude.ui.DashboardFragment">
 
 
 </FrameLayout>
