--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.gratitude.dashboard.fragments.HomeFragment">
+    tools:context="com.example.gratitude.ui.fragments.HomeFragment">
 
 
 
