--- a/app/src/main/res/layout/fragment_onboarding_step_user_info.xml
+++ b/app/src/main/res/layout/fragment_onboarding_step_user_info.xml
@@ -1,58 +1,85 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:background="@color/black">
-
-    <TextView
-        android:id="@+id/tvAskName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="𝐇𝐞𝐲, 𝐭𝐡𝐞𝐫𝐞!"
-        android:textSize="18sp"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:id="@+id/tvAsk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="𝐖𝐡𝐚𝐭 𝐬𝐡𝐨𝐮𝐥𝐝 𝐰𝐞 𝐜𝐚𝐥𝐥 𝐲𝐨𝐮?"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:layout_marginBottom="8dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
-        android:hint="Enter your name">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_outlined_box"
-            android:inputType="textCapWords" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/tvHowAreYou"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="How are you feeling today?"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:textStyle="bold" />
+    android:background="@color/black"
+    android:padding="24dp">
 
     <LinearLayout
-        android:id="@+id/moodOptionContainer"
-        android:layout_width="match_parent"
+        android:id="@+id/formContainer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/ivTulips"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.07">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tvAskName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="𝐇𝐞𝐲, 𝐭𝐡𝐞𝐫𝐞!"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tvAsk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="𝐖𝐡𝐚𝐭 𝐬𝐡𝐨𝐮𝐥𝐝 𝐰𝐞 𝐜𝐚𝐥𝐥 𝐲𝐨𝐮?"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter your name"
+            android:textColorHint="@color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_outlined_box"
+                android:inputType="textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/tvHowAreYou"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="How are you feeling today?"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:id="@+id/moodOptionContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/ivTulips"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:src="@drawable/tulips"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
