--- a/app/src/main/res/layout/fragment_onboarding_steps.xml
+++ b/app/src/main/res/layout/fragment_onboarding_steps.xml
@@ -18,7 +18,7 @@
             android:id="@+id/imgBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
+            android:background="@color/white"
             android:src="@drawable/ic_back" />
 
         <TextView
