--- a/app/src/main/res/layout/fragment_onboarding_step_user_info.xml
+++ b/app/src/main/res/layout/fragment_onboarding_step_user_info.xml
@@ -40,7 +40,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your name"
             android:textColorHint="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -48,25 +47,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_outlined_box"
-                android:inputType="textCapWords" />
+                android:textColor="@color/white"
+                android:inputType="textCapWords"
+                android:imeOptions="actionDone" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/tvHowAreYou"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="How are you feeling today?"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:textStyle="bold" />
 
-        <LinearLayout
-            android:id="@+id/moodOptionContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:orientation="vertical" />
     </LinearLayout>
 
     <ImageView
