--- a/app/src/main/res/layout/fragment_onboarding_step_focus_area.xml
+++ b/app/src/main/res/layout/fragment_onboarding_step_focus_area.xml
@@ -1,9 +1,8 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black"
     android:padding="24dp">
 
@@ -22,6 +21,7 @@
             android:id="@+id/tvAskName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
             android:text="Lets pick your focus areas"
             android:textColor="@color/white"
             android:textSize="18sp" />
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:fontFamily="@font/poppins_medium"
             android:text="Select at least 2 options to help us personalize your Home Screen"
             android:textColor="@color/white"
             android:textSize="12sp" />
@@ -41,7 +42,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:orientation="horizontal"
-            android:clipToPadding="false" />
+            android:clipToPadding="false"
+            tools:listitem="@layout/rv_cardview_item"/>
 
 
         <Button
@@ -49,6 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Continue"
+            android:fontFamily="@font/poppins_medium"
+            android:layout_marginEnd="0dp"
             android:background="@drawable/primary_theme_disabled_btn_background"
             android:textColor="@color/white"/>
 
