--- a/app/src/main/res/layout/rv_cardview_item.xml
+++ b/app/src/main/res/layout/rv_cardview_item.xml
@@ -1,35 +1,43 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="110dp"
-    android:layout_height="80dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardRoot"
+    android:layout_width="160dp"
+    android:layout_height="90dp"
     android:layout_margin="8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:foreground="?attr/selectableItemBackground"
-    app:cardCornerRadius="16dp"
+    app:cardCornerRadius="18dp"
     app:cardElevation="4dp"
     app:strokeColor="@color/dark_pink"
-    app:strokeWidth="0dp"
-    android:id="@+id/cardRoot">
+    app:strokeWidth="0dp">
 
-<FrameLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent">
+  <FrameLayout
+   android:layout_width="match_parent"
+   android:layout_height="match_parent">
 
-<ImageView
+ <ImageView
     android:id="@+id/ivBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="centerCrop"
-    android:src="@drawable/self_love" />
+     android:src="@drawable/self_lovee"/>
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="Self Love"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+ <View
+    android:id="@+id/viewOverlay"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#66000000"
+    android:visibility="visible" />
+
+ <TextView
+    android:id="@+id/tvTitle"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:text="Self Love"
+     android:fontFamily="@font/poppins_medium"
+    android:textColor="@android:color/white"
+    android:textStyle="bold"
+    android:textSize="15sp" />
 </FrameLayout>
-    </com.google.android.material.card.MaterialCardView>
+
+</com.google.android.material.card.MaterialCardView>
