--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Notify" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_700</item>
+        <item name="colorPrimary">@color/dark_pink</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/teal_700</item>
         <item name="colorOnSecondary">@color/white</item>
