--- a/app/src/main/res/layout/fragment_onboarding_step_journal.xml
+++ b/app/src/main/res/layout/fragment_onboarding_step_journal.xml
@@ -136,5 +136,18 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
+    <Button
+        android:id="@+id/btnContinue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Continue"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/formContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/primary_theme_disabled_btn_background"
+        app:layout_constraintBottom_toTopOf="@id/lottieView"
+        android:layout_marginTop="24dp" />
+
 
 </LinearLayout>
